force-app/main/default/objects/ST_Exhibition__c/fields/COA_Exhibition_Code__c.field-meta.xml
<CustomField>
    <fullName>COA_Exhibition_Code__c</fullName>
    <label>COA Exhibition Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>