force-app/main/default/objects/ST_Exhibition__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>IF(ST_End_Date__c &gt;= TODAY(), false,true)</formula>
    <label>Expired ?</label>
    <type>Checkbox</type>
</CustomField>