force-app/main/default/objects/ST_Exhibition__c/fields/ST_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>ST_Billing_Date__c</fullName>
    <label>Billing Date</label>
    <type>Date</type>
</CustomField>