force-app/main/default/objects/ST_Exhibition__c/fields/ST_Exhibition_Name__c.field-meta.xml
<CustomField>
    <fullName>ST_Exhibition_Name__c</fullName>
    <label>Exhibition Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>