force-app/main/default/objects/ST_Exhibition__c/fields/ST_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ST_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>